test/files/neg/t7622-multi-followers/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:multi
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
